--- a/index.html
+++ b/index.html
@@ -1,112 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Shashwat's Portfolio</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Reddit+Mono:wght@200..900&display=swap" rel="stylesheet">
 
-     <nav class="navbar navbar-expand-lg bg-body-tertiary" id="back">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="container-fluid">
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <div class="navbar-left">
-          <a class="navbar-brand" href="#">
-            Portfolio
-          </a>
-          </div>
-          <a class="nav-link" href="#About">About me</a>
-          <a class="nav-link" href="#Skills">Skills</a>
-          <a class="nav-link" href="#Contact">Contact me</a>
-        
-        </div>
-      </div>
-    </div>
-  </nav>
-   
 </head>
+
 <body>
+  <div class="body1">
+    <div class="body_left">
+      <h3>SOCIAL</h3>
+      <i class="bi bi-linkedin">
+        <a href="https://www.linkedin.com/in/shashwat-yadav-b527b5258/" target="_blank">
+          <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
+            <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"/>
+          </svg>
 
-  <div id="clockContainer">
-    <div id="hour"></div>
-    <div id="minute"></div>
-    <div id="second"></div>
-</div>
+          LINKEDIN</a></i>
 
-  <section class="master1">
-    <p>
-      Hello, I'm Shashwat Yadav,
-    </p>
-  <p class="shift">
-    I am learning html, css and javascript and this is my first project diving into this
-    world of web development.
-  </p>
-</section>
 
-<div class="master" >
-  <div class="row">
-    <div class="col-sm-5" id="About">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Education</h5>
-          <p class="card-text">I am currently pursuing my Bachelor of Technology degree in Mechanical Engineering from <a href="https://iitbhu.ac.in/" target="_blank"><button type="button" class="btn btn-warning">IIT BHU</button></a> <br>
-            <br></p>
-          
+      <i class="bi bi-github">
+        <a href="https://github.com/Shashwat-y" target="_blank">
+          <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+            <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"/>
+          </svg>
+          GITHUB
+        </a></i>
+
+
+      <i class="bi bi-instagram">
+        <a href="https://www.instagram.com/_shashwat_._yadav_/" target="_blank">
+  <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
+<path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334"/>
+</svg>
+INSTAGRAM
+
+</a></i>
+
+
+      <i class="bi bi-envelope">
+        <a href="mailto:Shashwat.yadav.mec22@iitbhu.ac.in" target="_blank">
+          <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
+            <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z"/>
+          </svg>
+          MAIL Me</a></i>
+
+<h3>PROJECTS</h3>
+<i class="bi bi-back">
+  <a href="https://github.com/Shashwat-y/Image-Gallery" target="_blank">
+    <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-back" viewBox="0 0 16 16">
+      <path d="M0 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v2h2a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2v-2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1z"/>
+    </svg>
+  GALLERY</a></i>
+<i class="bi bi-back">
+  <a href="https://github.com/Shashwat-y/Project" target="_blank">
+    <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-back" viewBox="0 0 16 16">
+      <path d="M0 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v2h2a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2v-2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1z"/>
+    </svg>
+  TO-DO</a></i>
+<i class="bi bi-back">
+  <a href="https://github.com/Shashwat-y/astro-app" target="_blank">
+    <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-back" viewBox="0 0 16 16">
+      <path d="M0 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v2h2a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2v-2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1z"/>
+    </svg>
+  ASTRO</a></i>
+
+    </div>
+
+    <div class="body_right">
+      <div class="right_top">
+        <div class="container">
+          <h2 >SHASHWAT YADAV HERE</h2>
         </div>
       </div>
-    </div>
-    <div class="col-sm-5">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Hobbies</h5>
-          <p class="card-text">I like playing chess which boosts my analytical skills.I also like listening to music as it calms me and it increases my focus.</p>
+      <div class="right_bottom">
+        <div class="right_bottom_text">
+          <div class="text1">
+            <h3>ABOUT</h3>
+
+            <p>I am a dedicated student pursuing a Bachelor of Technology (B.Tech) degree in<span class="t1"><a href="https://iitbhu.ac.in/dept/mec" target="_blank"> Mechanical Engineering</a></span> from
+              the prestigious <span class="t2"><a href="https://iitbhu.ac.in/">Indian Institute of Technology (IIT) BHU</a></span>. With a passion for understanding the intricacies
+              of machinery, design, and innovation, I am committed to exploring the dynamic field of mechanical
+              engineering. Through rigorous academic pursuits and hands-on experiences, I aspire to contribute
+              meaningfully to the advancement of technology and industry. Eager to tackle challenges and embark on a
+              journey of lifelong learning, I am driven to excel in both academic endeavors and practical applications
+              within the realm of mechanical engineering.</p>
+          </div>
+          <div class="skills">
+            <h3>SKILLS</h3>
+            <div class="image">
+              <img src="Images/html.png">
+              <img src="Images/css.png">
+              <img src="Images/js.png">
+              <img src="Images/c-1.svg">
+              <img src="Images/ISO_C++_Logo.svg.png">
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
-    <div class="col-sm-5" style="margin-left: 18%; width:fit-content;">
-      <div class="card" >
-        <div class="card-body">
-          <h5 class="card-title" id="Skills">Skills</h5>
-          <div class="skills-list">
-                <img src="images/c-1.svg">
-                <img src="images/ISO_C++_Logo.svg.png">
-                <img src="images/html.png">
-                <img src="images/css.png">
-                <img src="images/js.png">
-                <img src="images/Bootstrap_logo.svg.png">
+        <div class="right_bottom_photo">
+          <img src="Images/Screenshot 2024-04-07 at 10.32.14 AM.png" width="250px" height="300px">
+          <h3 class="righttext">SHASHWAT </h3>
         </div>
-        </div>
+
       </div>
     </div>
   </div>
-  <div class="social">
-    <a href="https://www.instagram.com/_shashwat_._yadav_/" target="_blank">
-    <i class="fab fa-instagram fa-x"></i>
-  </a>
-  <a id="Contact" href="mailto:Shashwat.yadav.mec22@iitbhu.ac.in" target="_blank">
-    <i class="far fa-envelope fa-x"></i>
-  </a>
-  
-  <a href="https://www.linkedin.com/in/shashwat-yadav-b527b5258" target="_blank">
-    <i class="fab fa-linkedin fa-x"></i>
-  </a>
-  
-  <a href="https://github.com/Shashwat-y" target="_blank">
-    <i class="fab fa-github fa-x"></i>
-  </a>
-  </div>
-</div>
-<script src="index.js"></script>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
+
 </html>
